Added version and uptime endpoints
