# kafka_basics/services/order/main.go
@@ -18,19 +18,22 @@ import (
 var APISchema []byte
 var kafkaProducer kafka_helpers.KafkaProducer
 var kafkaConfigMap *kafka.ConfigMap
+var appStartTime time.Time
 
 func registerHandlers(mux *http.ServeMux) {
+	mux.HandleFunc("GET /uptime", upTimeHandler)
+	mux.HandleFunc("GET /version", versionHandler)
 	mux.HandleFunc("GET /health", healthHandler)
 	mux.HandleFunc("POST /order/{$}", orderHandler)
 }
 
 func main() {
-	startTime := time.Now()
+	appStartTime = time.Now()
 	sigs := make(chan os.Signal, 1)
 	signal.Notify(sigs, os.Interrupt, syscall.SIGINT, syscall.SIGTERM)
 	go func() {
 		sig := <-sigs
-		log.Printf("Got %v signal. Exiting. Uptime %s\n", sig.String(), time.Since(startTime).String())
+		log.Printf("Got %v signal. Exiting. Uptime %s\n", sig.String(), time.Since(appStartTime).String())
 		os.Exit(0)
 	}()
 
